feat : hp 랜덤 생성 기능 추가